phase2_Dev/src/objects/ProcessingStep__c.object
<CustomObject>
    <fields>
        <fullName>Config__c</fullName>
        <description>Configuration for the Processing Step.</description>
        <label>Config</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormVersion__c</fullName>
        <label>Form Version</label>
        <referenceTo>FormVersion__c</referenceTo>
        <relationshipLabel>Processing Steps</relationshipLabel>
        <relationshipName>Processing_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Type</label>
        <referenceTo>ProcessingStepType__c</referenceTo>
        <relationshipLabel>Processing Steps</relationshipLabel>
        <relationshipName>ProcessingSteps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Processing Step</label>
    <nameField>
        <label>Processing Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>